--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <p>Team 62</p>
