--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="js.js" ></script>
 </head>
 <body>
     <p>Team 62</p>
@@ -24,6 +26,4 @@
     Scores
     <div id="scores">
     </div>
-    <script src="jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="js.js" ></script>
 </body>
