update css and delete jquery

--- a/apitest.html
+++ b/apitest.html
@@ -1,9 +1,10 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="/css.css">
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="js2.js" ></script>
+  <meta http-equiv="refresh" content="60; url=apitest.html" />
 </head>
 <body>
     <p>Team 62</p>
