--- a/apitest.html
+++ b/apitest.html
@@ -9,7 +9,7 @@
 <body>
     <p>Team 62</p>
     <b><div id="status"></div></b>
-    Rankings
+    Rankingsa
     <table style="width:100%" border="1">
         <tr>
             <th>Rank</th>
