--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Team 62</p>
     <b><div id="status"></div></b>
     Rankings
-    <table style="width:100%" border="1">
+    <table style="width:100%" border="1" id="maintable">
         <tr>
             <th>Rank</th>
             <th>Team #</th>
