make other things go away

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>Team 62</p>
     <b><div id="status"></div></b>
-    Rankings
+    <div id = "maintable">Rankings</div>
     <table style="width:100%" border="1" id="maintable">
         <tr>
             <th>Rank</th>
@@ -24,7 +24,7 @@
         <b><tr id="us"></tr></b>
     </table>
     <br></br>
-    Scores
+    <div id="maintable">Scores</div>
     <div id="scores">
     </div>
 </body>
