--- a/apitest.html
+++ b/apitest.html
@@ -7,9 +7,8 @@
   <meta http-equiv="refresh" content="60; url=apitest.html" />
 </head>
 <body>
-    <p>Team 62</p>
-    <b><div id="status"></div></b>
-    Rankings
+    <p>Team 62</p> <b><div id="status"></div></b>
+Rankings
     <table style="width:100%" border="1">
         <tr>
             <th>Rank</th>
@@ -21,10 +20,10 @@
         <tr id="1"></tr>
         <tr id="2"></tr>
         <tr id="3"></tr>
-        <b><tr id="us"></tr></b>
+        <tr id="us"></tr>
     </table>
-    <br></br>
-    Scores
-    <div id="scores">
-    </div>
+    <br></br>Scores
+    <div id="highlowscore"></div>
+    <div id="scores"></div>
+    <div id="sku"></div>
 </body>
