more code from JSFiddle

--- a/apitest.html
+++ b/apitest.html
@@ -7,7 +7,7 @@
   <meta http-equiv="refresh" content="60; url=apitest.html" />
 </head>
 <body>
-    <p>Team 62</p> <b><div id="status"></div></b>
+    <p id="title"></p> <b><div id="status"></div></b>
 Rankings
     <table style="width:100%" border="1">
         <tr>
