should be done, should work

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta http-equiv="refresh" content="60; url=index.html" />
 </head>
 <body>
-    <p>Team 62</p>
-    <b><div id="status"></div></b>
-    <div id = "maintable">Rankings</div>
-    <table style="width:100%" border="1" id="maintable">
+    <p id="title" class="teamname"></p>
+    <div id="status"></div> <i>Rankings</i>
+
+    <table style="width:100%" border="1">
         <tr>
             <th>Rank</th>
             <th>Team #</th>
@@ -21,10 +21,14 @@
         <tr id="1"></tr>
         <tr id="2"></tr>
         <tr id="3"></tr>
-        <b><tr id="us"></tr></b>
+        <tr id="us"></tr>
     </table>
-    <br></br>
-    <div id="maintable">Scores</div>
-    <div id="scores">
+    <br></br><i>Scores</i>
+
+    <div id="highlowscore"></div>
+    <div id="scores"></div>
+    <div id="sku"></div>
+    <div id="credit" style="font-size:12px;">By <a href="http://jonathandamico.me/">Jonathan Damico</a>, uses API from <a href="http://vex.us.nallen.me/the_data">Nathan Allen</a>
+
     </div>
 </body>
