--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="js.js" ></script>
+  <title>Team 62 Status</title>
   <meta http-equiv="refresh" content="60; url=index.html" />
 </head>
 <body>
