make the site prettier

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <tr id="3"></tr>
         <tr id="us"></tr>
     </table>
-    <br></br><i>Scores</i>
+    <hr>
+    
+    <i>Scores</i>
 
     <div id="highlowscore"></div>
     <div id="scores"></div>
