add link back to main page

--- a/rankings.html
+++ b/rankings.html
@@ -30,6 +30,6 @@
     <div id="rankings"></div>
     <div id="sku"></div>
     <div id="credit" style="font-size:12px;">By <a href="http://jonathandamico.me/">Jonathan Damico</a>, uses API from <a href="http://vex.us.nallen.me/the_data">Nathan Allen</a>
-
+    <div><a href="index.html">Return to Main Page</a></div>
     </div>
 </body>
