--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 </head>
 <body>
     <p id="title" class="teamname"></p>
-    <div id="status"></div> <i>Rankings</i>
+    <div id="status"></div>
+<div id="currentmatch"></div>
+
+ <i>Rankings</i>
 
     <table style="width:100%" border="1">
         <tr>
