--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <p id="title" class="teamname"></p>
-    <i>Rankings</i>
+    <i>Skills</i>
     <div id="skills"></div>
     <div id="sku"></div>
 <div><a href=index.html>Main Page</a></div>
