add prog skills

--- a/skills.html
+++ b/skills.html
@@ -26,8 +26,10 @@
 </head>
 <body>
     <p id="title" class="teamname"></p>
-    <i>Skills</i>
-    <div id="skills"></div>
+    <i>Robot Skills</i>
+    <div id="roboskills"></div>
+    <i>Programming Skills</i>
+    <div id="progskills"></div>
     <div id="sku"></div>
 <div><a href=index.html>Main Page</a></div>
     <div id="credit" style="font-size:12px;">By <a href="http://jonathandamico.me/">Jonathan Damico</a>, uses API from <a href="http://vex.us.nallen.me/the_data">Nathan Allen</a>
