--- a/skills.html
+++ b/skills.html
@@ -26,14 +26,19 @@
 </head>
 <body>
     <p id="title" class="teamname"></p>
-    <i>Robot Skills</i>
-    <div id="roboskills"></div>
-    <i>Programming Skills</i>
+
     <table style="width=100%"><tr>
-      <td><div id="progskills"></div></td>
-      <td><div id="sku"></div></td>
+      <td>
+        <i>Robot Skills</i>
+        <div id="roboskills"></div>
+      </td>
+      <td>
+        <i>Programming Skills</i>
+        <div id="progskills"></div>
+      </td>
     </tr></table>
-<div><a href=index.html>Main Page</a></div>
+    <div id="sku"></div>
+    <div><a href=index.html>Main Page</a></div>
     <div id="credit" style="font-size:12px;">By <a href="http://jonathandamico.me/">Jonathan Damico</a>, uses API from <a href="http://vex.us.nallen.me/the_data">Nathan Allen</a>
     <div><a href="index.html">Return to Main Page</a></div>
     </div>
