try this instead of table

--- a/skills.html
+++ b/skills.html
@@ -18,6 +18,7 @@
   <meta name="theme-color" content="#ffffff">
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/css.css">
+  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/daneden/Toast/master/css/grid.css">
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="js.js" ></script>
@@ -27,16 +28,16 @@
 <body>
     <p id="title" class="teamname"></p>
 
-    <table style="width=100%"><tr>
-      <td>
+    <div class="grid">
+      <div class="grid__col grid__col--1-of-3">
         <i>Robot Skills</i>
         <div id="roboskills"></div>
-      </td>
-      <td>
+      </div>
+      <div class="grid__col grid__col--1-of-3">
         <i>Programming Skills</i>
         <div id="progskills"></div>
-      </td>
-    </tr></table>
+      </div>
+    </table>
     <div id="sku"></div>
     <div><a href=index.html>Main Page</a></div>
     <div id="credit" style="font-size:12px;">By <a href="http://jonathandamico.me/">Jonathan Damico</a>, uses API from <a href="http://vex.us.nallen.me/the_data">Nathan Allen</a>
