--- a/skills.html
+++ b/skills.html
@@ -27,17 +27,18 @@
 </head>
 <body>
     <p id="title" class="teamname"></p>
-
-    <div class="grid">
-      <div class="grid__col grid__col--1-of-3">
-        <i>Robot Skills</i>
-        <div id="roboskills"></div>
+    <div style="width=100%">
+      <div class="grid">
+        <div class="grid__col grid__col--1-of-3">
+          <i>Robot Skills</i>
+          <div id="roboskills"></div>
+        </div>
+        <div class="grid__col grid__col--1-of-3">
+          <i>Programming Skills</i>
+          <div id="progskills"></div>
+        </div>
       </div>
-      <div class="grid__col grid__col--1-of-3">
-        <i>Programming Skills</i>
-        <div id="progskills"></div>
-      </div>
-    </table>
+    </div>
     <div id="sku"></div>
     <div><a href=index.html>Main Page</a></div>
     <div id="credit" style="font-size:12px;">By <a href="http://jonathandamico.me/">Jonathan Damico</a>, uses API from <a href="http://vex.us.nallen.me/the_data">Nathan Allen</a>
