shooting myself in the foot like

--- a/skills.html
+++ b/skills.html
@@ -27,13 +27,13 @@
 </head>
 <body>
     <p id="title" class="teamname"></p>
-    <div style="width=100%">
+    <div class="content">
       <div class="grid">
-        <div class="grid__col grid__col--1-of-3">
+        <div class="grid__col grid__col--1-of-2">
           <i>Robot Skills</i>
           <div id="roboskills"></div>
         </div>
-        <div class="grid__col grid__col--1-of-3">
+        <div class="grid__col grid__col--1-of-2">
           <i>Programming Skills</i>
           <div id="progskills"></div>
         </div>
