--- a/skills.html
+++ b/skills.html
@@ -32,10 +32,14 @@
         <div class="grid__col grid__col--1-of-2">
           <i>Robot Skills</i>
           <div id="roboskills"></div>
+          <i>World High Score
+          <div id="robohighscore"></div>
         </div>
         <div class="grid__col grid__col--1-of-2">
           <i>Programming Skills</i>
           <div id="progskills"></div>
+          <i>World High Score
+          <div id="proghighscore"></div>
         </div>
       </div>
     </div>
