--- a/skills.html
+++ b/skills.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div id="sku"></div>
-    <div><a href=index.html>Main Page</a></div>
+    <div><a href=index.html>Main Page</a> <a href=rankings.html>Rankings</a></div>
     <div id="credit" style="font-size:12px;">By <a href="http://jonathandamico.me/">Jonathan Damico</a>, uses API from <a href="http://vex.us.nallen.me/the_data">Nathan Allen</a>
     <div><a href="index.html">Return to Main Page</a></div>
     </div>
