--- a/mobile.html
+++ b/mobile.html
@@ -29,8 +29,9 @@
     <p id="title" class="teamname"></p>
     <div id="status"></div>
     <div id="lastmatch" class="flex-item">
-      <div style=font-size:10>Red: TEST</div>
-      <div style=font-size:10>Blue: Test</div>
+      Red: test
+      Blue: test
+      asdfasdf
     </div>
     <div id="nextmatch" class="flex-item"></div>
     <div id="sku"></div>
