--- a/todo.html
+++ b/todo.html
@@ -1,7 +1,7 @@
 
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.5/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.5/slick-theme.css"/>
@@ -23,6 +23,6 @@
       </body>
       <hr>
       <div style="width: 80%; margin-left: auto; margin-right: auto;">
-        <a href="https://trello.com/b/aGxqBDip">Redirecting, click here to see my schedule</a>
+        <a href="https://trello.com/b/aGxqBDip">Redirecting</a>
       </div>
 </html>
