see if links work

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id="highlowscore"></div>
     <div id="scores"></div>
     <div id="sku"></div>
-    <div><a href=rankings.html>Rankings</a> <a href=skills.html>Skills</a></div>
+    <div id="indexLinks"></div>
     <div id="credit" style="font-size:12px;">By <a href="http://jonathandamico.me/">Jonathan Damico</a>, uses API from <a href="http://vex.us.nallen.me/the_data">Nathan Allen</a></div>
 
 <div id="credit" style="font-size:12px;">By <a href="http://github.com/team62/team62.github.io">View Source on Github</a></div>
