--- a/skills.html
+++ b/skills.html
@@ -33,14 +33,14 @@
           <i>Robot Skills</i>
           <div id="roboskills"></div>
           <br>
-          <i>World High Score
+          <i>World High Score</i>
           <div id="robohighscore"></div>
         </div>
         <div class="grid__col grid__col--1-of-2">
           <i>Programming Skills</i>
           <div id="progskills"></div>
           <br>
-          <i>World High Score
+          <i>World High Score</i>
           <div id="proghighscore"></div>
         </div>
       </div>
