change how pages refresh

--- a/skills.html
+++ b/skills.html
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="js.js" ></script>
   <title>VEX Status</title>
-  <meta http-equiv="refresh" content="60; url=skills.html" />
+  <meta http-equiv="refresh" content="60">
 </head>
 <body>
     <p id="title" class="teamname"></p>
