yep, you kinda need that js

--- a/simplestatus.html
+++ b/simplestatus.html
@@ -1,6 +1,9 @@
 <head>
   <title>VEX Status</title>
   <meta http-equiv="refresh" content="60">
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="js.js" ></script>
 </head>
 <body>
   <div id="status"></div>
