--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" type="text/css" href="/css.css">
   <script type="text/javascript" src="//code.jquery.com/jquery-1.12.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="moment.min.js"></script>
   <script type="text/javascript" src="js.js" ></script>
   <title>VEX Status</title>
   <meta http-equiv="refresh" content="60">
